--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     </div>
 
     <script>
+        //prototypes
         HTMLElement.prototype.empty = function () {
             while (this.firstChild) {
                 this.removeChild(this.firstChild);
